--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <title>alura books</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
-    
 </head>
 <body>
-     <h1>Alurabooks2s</h1>
+    <header class="cabeçalho">
+    <span class="cabeçalho_ menu-hamburger"></span>
+    <img scr="img/Logo.svg" alt="Logo da Alurabook2s">
+    <a href="#"><img src="img/Favoritos.svg" alt="Meus Favoritos"</a>
+    <a href="#"><img src="img/Compras.svg" alt="carrinho de compras"</a>
+    <a href="#"><img src="img/Usuário.svg" alt="meu perfil"</a>
 </body>
